2005-09-23  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* README: Mention in addition to the listed libraries, their
	  header files are also neccessary. A missing usb.h is a common
	  problem when building SANE (--> no USB support).
	* configure configure.in: Added warning message that's printed
	  when libusb or its header file is not available.
	* frontend/scanimage.c doc/scanimage.man: Added progress indicator
	  to scanimage (based on patch from Mario Goppold 
	  <mgoppold@tbz-pariv.de>). Updated copyright information, added
	  links to sane-devel mailing list.
	* sanei/sanei_usb.c: Ignore EBUSY from usb_set_configuration. This
	  function fails, if a different interface of the same device is
	  claimed (e.g. by usblp).

2005-09-22  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* backend/hp4200.c backend/umax.c backend/umax1220u.c
	  include/sane/sanei_pv8630.h sanei/sanei_pv8630.c:
	  Fix SANE_DEBUG_SANEI_PV8630

2005-09-19  Frank Zago  <sane at zago.net>

	* backend/dc210.c backend/leo.c backend/matsushita.c
	  backend/sceptre.c backend/sp15c-scsi.h backend/sp15c.h
	  backend/teco1.c backend/teco2.c backend/teco3.c
	  include/sane/sanei_backend.h: Replaced __unused__ with 
	  __sane_unused__ to avoid a namespace conflict.

2005-09-18  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx_high.c
	  doc/descriptions/gt68xx.descdoc/gt68xx/gt68xx.CHANGES
	  doc/gt68xx/gt68xx.TODO: Fixed segfault that may happen with
	  Mustek ScanExpress A3 USB. 
	* doc/backend-writing.txt: Added some hints about number of
	  files. 
	* backend/mustek.conf doc/sane-mustek.man
	  doc/descriptions/mustek.desc: Mustek Paragon 600 II EP
	  works. Mentioned "parport0".
	* doc/descriptions/unsupported.desc: Added Canon PIXMA MP750.

2005-09-17  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* README.darwin: New date for good libusb from CVS

2005-09-07  Mattias Ellert <mattias.ellert@tsl.uu.se>
